[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
format = ["wheel"] # Specify to only build wheel
sdist = false

[tool.hatch.build.targets.wheel]
packages = ["src/belial_db"]


[project]
name = "ManMade2.BelialDB"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [{ name = "ManMade2", email = "madskris@proton.me" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["sqlalchemy", "pydantic"]

[project.urls]
Documentation = "https://github.com/ManMade2/belial-db#readme"
Issues = "https://github.com/ManMade2/belial-db/issues"
Source = "https://github.com/ManMade2/belial-db"

[tool.hatch.version]
path = "src/belial_db/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = ["mypy>=1.0.0"]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/belial_db tests}"

[tool.coverage.run]
source_pkgs = ["belial_db", "tests"]
branch = true
parallel = true
omit = ["src/belial_db/__about__.py"]

[tool.coverage.paths]
belial_db = ["src/belial_db", "*/belial-db/src/belial_db"]
tests = ["tests", "*/belial-db/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[tool.hatch.envs.testing]
extra-dependencies = ["pytest", "mock"]
